# bot-grpc-server

./: .env  .gitmodules  Cargo.toml  README.md  build.rs
migrations/: 20250220072532_tables.down.sql  20250220072532_tables.up.sql  20250221122122_data.down.sql  20250221122122_data.up.sql
src/: main.rs  utils.rs
src/models/: logs.rs  mod.rs  moderation.rs  tickets.rs
src/services/: guild_service.rs  logs_service.rs  mod.rs  moderation_service.rs  tickets_service.rs
