[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
dotenv = "0.15.0"
prost = "0.13.5"
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.43.0", features = ["full"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.12.3"
